# agent-memory

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
agents/: openai.yaml
references/: memory-file-contract.md
scripts/: bootstrap_memory.py  test_memory.py  validate_memory.py
