[project]
name = "agent-memory"
version = "0.1.0"
description = "Bootstrap and maintain scoped, self-updating project memory for coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["codex", "agent", "memory", "skill", "llm"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["scripts"]
python_files = ["test_*.py"]
